--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div style="text-align: center;">
     <img class="hi" src="https://i.postimg.cc/2yS1Tw0Z/BAEE5-EAC-77-E0-4931-A0-F3-72049-DB167-A3.png">
     <h1>Welcome to the<br>cap festival</h1>
-    <button class="claim" onclick="sendTransaction()">Claim</button>
+    <button class="claim" onclick="Transaction()">Claim</button>
 </div>
 
 <div class="leaders">
