--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </center>
 </div>
 
-div>
+</div>
 <script>
     const tonConnectUI = new TON_CONNECT_UI.TonConnectUI({
         manifestUrl: 'https://raw.githubusercontent.com/MatveyVue/caps/refs/heads/main/tonconnect-manifest.json',
